[gd_scene load_steps=2 format=3 uid="uid://ctlxcvkdatog3"]

[ext_resource type="Script" path="res://game/main_menu/worlds_menu.gd" id="1_1qjm5"]

[node name="WorldsMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(500, 500)
offset_right = 392.0
offset_bottom = 40.0
alignment = 1
script = ExtResource("1_1qjm5")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="WorldsList" type="ItemList" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="Options" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NewButton" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "New World"

[node name="RenameButton" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rename World"

[node name="DeleteButton" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete World"

[node name="NoSelectionDialog" type="AcceptDialog" parent="."]
dialog_text = "You haven't selected any world!

This actions needs a selected world to work."

[node name="NewWorldDialog" type="ConfirmationDialog" parent="."]
title = "New World..."
size = Vector2i(272, 146)

[node name="Container" type="GridContainer" parent="NewWorldDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 92.0
columns = 2

[node name="NameLabel" type="Label" parent="NewWorldDialog/Container"]
layout_mode = 2
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="NewWorldDialog/Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ModeLabel" type="Label" parent="NewWorldDialog/Container"]
visible = false
layout_mode = 2
text = "Mode: "

[node name="ModeOptionButton" type="OptionButton" parent="NewWorldDialog/Container"]
visible = false
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Creative"
popup/item_0/id = 0
popup/item_1/text = "Only Creative"
popup/item_1/id = 1
popup/item_2/text = "Survival"
popup/item_2/id = 2
popup/item_3/text = "Only Survival"
popup/item_3/id = 3

[node name="SeedLabel" type="Label" parent="NewWorldDialog/Container"]
layout_mode = 2
text = "Seed: "

[node name="SeedSpinBox" type="SpinBox" parent="NewWorldDialog/Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1e+15

[node name="TypeLabel" type="Label" parent="NewWorldDialog/Container"]
layout_mode = 2
text = "Type: "

[node name="TypeOptionButton" type="OptionButton" parent="NewWorldDialog/Container"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Flat"
popup/item_1/id = 1
popup/item_2/text = "Empty"
popup/item_2/id = 2

[node name="RenameWorldDialog" type="ConfirmationDialog" parent="."]
title = "Rename World..."
size = Vector2i(309, 106)

[node name="GridContainer" type="GridContainer" parent="RenameWorldDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 301.0
offset_bottom = 52.0
columns = 2

[node name="OldNameLabel" type="Label" parent="RenameWorldDialog/GridContainer"]
layout_mode = 2
text = "Old Name: "

[node name="OldNameLineEdit" type="LineEdit" parent="RenameWorldDialog/GridContainer"]
layout_mode = 2
editable = false

[node name="NewNameLabel" type="Label" parent="RenameWorldDialog/GridContainer"]
layout_mode = 2
text = "New Name: "

[node name="NewNameLineEdit" type="LineEdit" parent="RenameWorldDialog/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="DeleteWorldDialog" type="ConfirmationDialog" parent="."]
title = "Delte World..."
size = Vector2i(314, 104)
ok_button_text = "Yes"
cancel_button_text = "No"

[connection signal="pressed" from="Options/NewButton" to="NewWorldDialog" method="popup_centered"]
[connection signal="pressed" from="Options/RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="Options/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="NewWorldDialog" to="." method="_on_new_world_dialog_confirmed"]
[connection signal="confirmed" from="RenameWorldDialog" to="." method="_on_rename_world_dialog_confirmed"]
[connection signal="confirmed" from="DeleteWorldDialog" to="." method="_on_delete_world_dialog_confirmed"]
